# data_bot

./: .gitignore  Cargo.toml  README.md
logs/: error_system.txt  root_system.txt
src/: ai.rs  main.rs  sql_ops.rs  style.rs
