[package]
name = "data_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.15.0"
crossterm = "0.27.0"
serde = "1.0.190"
serde_json = "1.0.108"
tiktoken-rs = { version = "0.5.6", features = ["async-openai"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "sqlite", "macros"] }